--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,40 +1,24 @@
-<%- model_class = Character.new.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:first_name) %></th>
-      <th><%= model_class.human_attribute_name(:last_name) %></th>
-      <th><%= model_class.human_attribute_name(:given_name) %></th>
-      <th><%= model_class.human_attribute_name(:main_series_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @characters.each do |character| %>
-      <tr>
-        <td><%= link_to character.id, character_path(character) %></td>
-        <td><%= character.first_name %></td>
-        <td><%= character.last_name %></td>
-        <td><%= character.given_name %></td>
-        <td><%= character.main_series_id %></td>
-        <td><%=l character.created_at %></td>
-        <td>
-          <%#<%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_character_path(character), :class => 'btn btn-mini' %>
-          <%#<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      character_path(character),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="page-header">
+  <h1>Characters <small>Sorted by series</small></h1>
+</div>
 
-<%#<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_character_path,
-            :class => 'btn btn-primary' %>
+<%= render partial: "shared/alpha_pagination",
+           locals: {default_letter: @ap.default_letter, active_letters: @ap.active_letters} %>
+
+<div class="row-fluid">
+  <% @ap.get_data.each do |l_data| %>
+    <div class="span<%= 12 / @ap.real_no_of_columns %>">
+      <% l_data.each do |letter, s_data| %>
+        <h3><a name="<%= letter %>" class="anchor"><%= letter %></a></h3>
+        <% s_data.each do |series, c_data| %>
+          <h4><%= link_to(series.name, series_path(series)) %></h4>
+          <div class="well">
+            <% c_data.each do |character| %>
+              <p><%= link_to(character.full_name, character_path(character)) %></p>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
