--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -1,38 +1,21 @@
-<%- model_class = Series.new.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:color_code) %></th>
-      <th><%= model_class.human_attribute_name(:slug) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @series.each do |series| %>
-      <tr>
-        <td><%= link_to series.id, series_path(series) %></td>
-        <td><%= series.name %></td>
-        <td><%= series.color_code %></td>
-        <td><%= series.slug %></td>
-        <td><%=l series.created_at %></td>
-        <td>
-          <%#%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_series_path(series), :class => 'btn btn-mini' %>
-          <%#%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      series_path(series),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="page-header">
+  <h1>Series</h1>
+</div>
 
-<%#%= link_to t('.new', :default => t("helpers.links.new")),
-            new_series_path,
-            :class => 'btn btn-primary' %>
+<%= render partial: "shared/alpha_pagination",
+           locals: {default_letter: @ap.default_letter, active_letters: @ap.active_letters} %>
+
+<div class="row-fluid">
+  <% @ap.get_data.each do |l_data| %>
+    <div class="span<%= 12 / @ap.real_no_of_columns %>">
+      <% l_data.each do |letter, s_data| %>
+        <h3><a name="<%= letter %>" class="anchor"><%= letter %></a></h3>
+        <div class="well">
+          <% s_data.each do |series| %>
+            <p><%= link_to(series.name, series_path(series)) %></p>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
