--- a/app/views/voice_actors/index.html.erb
+++ b/app/views/voice_actors/index.html.erb
@@ -1,38 +1,21 @@
-<%- model_class = VoiceActor.new.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:first_name) %></th>
-      <th><%= model_class.human_attribute_name(:last_name) %></th>
-      <th><%= model_class.human_attribute_name(:slug) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @voice_actors.each do |voice_actor| %>
-      <tr>
-        <td><%= link_to voice_actor.id, voice_actor_path(voice_actor) %></td>
-        <td><%= voice_actor.first_name %></td>
-        <td><%= voice_actor.last_name %></td>
-        <td><%= voice_actor.slug %></td>
-        <td><%=l voice_actor.created_at %></td>
-        <td>
-          <%#%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_voice_actor_path(voice_actor), :class => 'btn btn-mini' %>
-          <%#%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      voice_actor_path(voice_actor),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="page-header">
+  <h1>Voice Actors</h1>
+</div>
 
-<%#%= link_to t('.new', :default => t("helpers.links.new")),
-            new_voice_actor_path,
-            :class => 'btn btn-primary' %>
+<%= render partial: "shared/alpha_pagination",
+           locals: {active_letters: @ap.active_letters} %>
+
+<div class="row-fluid">
+  <% @ap.get_data.each do |l_data| %>
+    <div class="span<%= 12 / @ap.real_no_of_columns %>">
+      <% l_data.each do |letter, va_data| %>
+        <h3><a name="<%= letter %>" class="anchor"><%= letter %></a></h3>
+        <div class="well">
+          <% va_data.each do |voice_actor| %>
+            <p><%= link_to(voice_actor.full_name, voice_actor_path(voice_actor)) %></p>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
