Added Soulmate for typeahead search for Chars, Series and VAs.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -26,6 +26,7 @@
 // Example:
 // @linkColor: #ff0000;
 
+// Make anchor links look like ordinary text.
 a.anchor, a:hover.anchor {
     color: @textColor;
     text-decoration: none;
