--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,5 +1,15 @@
 <div class="page-header">
-  <h1>Characters <small>Sorted by series</small></h1>
+  <div class="row-fluid">
+    <div class="span8">
+      <h1>Characters <small>Sorted by series</small></h1>
+    </div>
+    <div class="span4">
+      <%= render partial: "shared/autocomplete_box",
+                 locals: {placeholder_text: "Search for a character...",
+                          source_path: autocomplete_characters_path,
+                          target_path: characters_path} %>
+    </div>
+  </div>
 </div>
 
 <%= render partial: "shared/alpha_pagination",
