--- a/app/views/voice_actors/index.html.erb
+++ b/app/views/voice_actors/index.html.erb
@@ -1,5 +1,15 @@
 <div class="page-header">
-  <h1>Voice Actors</h1>
+  <div class="row-fluid">
+    <div class="span8">
+      <h1>Voice Actors</h1>
+    </div>
+    <div class="span4">
+      <%= render partial: "shared/autocomplete_box",
+                 locals: {placeholder_text: "Search for a voice actor...",
+                          source_path: autocomplete_voice_actors_path,
+                          target_path: voice_actors_path} %>
+    </div>
+  </div>
 </div>
 
 <%= render partial: "shared/alpha_pagination",
