--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,31 +1,35 @@
-<%- model_class = @character.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
+<div class="row-fluid">
+  <div class="span2" style="text-align: center;">
+    <%= image_tag @character.avatar_url, size: '100x100' %>
+  </div>
+  <div class="span9 offset1">
+    <h1><%= @character.full_name %></h1>
+    <h3>Series: <em><%= link_to @character.main_series.name, series_path(@character.main_series) %></em></h3>
+    <%= format_other_series_list(@character.other_series) %>
+  </div>
+</div>
 
-<p>
-  <strong><%= model_class.human_attribute_name(:first_name) %>:</strong><br>
-  <%= @character.first_name %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:last_name) %>:</strong><br>
-  <%= @character.last_name %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:given_name) %>:</strong><br>
-  <%= @character.given_name %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:main_series_id) %>:</strong><br>
-  <%= @character.main_series_id %>
-</p>
+<div class="page-header">
+  <h2>Statistics</h2>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    Stuff
+  </div>
+</div>
+
+<div class="page-header">
+  <h2>Tournament History</h2>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    More stuff
+  </div>
+</div>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               characters_path, :class => 'btn'  %>
-  <%#<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_character_path(@character), :class => 'btn' %>
-  <%#<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              character_path(@character),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
 </div>
