--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row-fluid">
+<div class="row-fluid" xmlns="http://www.w3.org/1999/html">
   <% if @character.avatar? %>
     <div class="span2" style="text-align: center;">
       <%= image_tag @character.avatar_url, size: '100x100' %>
@@ -17,21 +17,27 @@
   <h2>Statistics</h2>
 </div>
 
-<div class="row-fluid">
-  <div class="span12">
-    Stuff
-  </div>
-</div>
+<p>
+  Stuff
+</p>
 
 <div class="page-header">
   <h2>Tournament History</h2>
 </div>
 
-<div class="row-fluid">
-  <div class="span12">
-    More stuff
-  </div>
-</div>
+<dl class="dl-horizontal">
+  <% @character.tournament_history.each do |t, th| %>
+    <p>
+      <dt>
+        <h3><%= t.year %></h3>
+      </dt>
+      <dd>
+        <%= format_tournament_buttons t, th %>
+      </dd>
+    </p>
+  <% end %>
+</dl>
+
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
