--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -2,7 +2,7 @@
   <h1>Utilities</h1>
 </div>
 
-<%= form_for :info, method: :get, remote: true do |f| -%>
+<%= form_for :info, remote: true do |f| -%>
   <div class="row-fluid">
     <div class="span12">
       <h2>Characters and series</h2>
@@ -23,10 +23,10 @@
       </div>
       <div class="well">
         <h4>
-          <%#= f.radio_button :transform, :result_list %>
-          <!--Convert list of results with Japanese Names and Series-->
+          <%= f.radio_button :transform, :result_list %>
+          Convert list of results with Japanese Names and Series
         </h4>
-        <%#= f.text_area :result_csv, size: '10x10' %>
+        <%= f.text_area :result_csv, size: '10x10' %>
       </div>
     </div>
   </div>
@@ -35,6 +35,8 @@
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
   </div>
 <% end -%>
+
+<div id="flash-alert" class="alert alert-error" style="display: none;"></div>
 
 <div class="row-fluid">
   <div class="span12">
