--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -4,10 +4,15 @@
 
 <%= form_for :info, remote: true do |f| -%>
   <div class="row-fluid">
-    <div class="span12">
-      <h2>Characters and series</h2>
-      <h4>In format <em>Japanese Character Name,English Character Name,Japanese Series Name,English Series Name</em> - one per line</h4>
-      <%= f.text_area :character_series_csv, size: '10x10' %>
+    <div class="span6">
+      <h2>Characters</h2>
+      <h4>In format <em>Japanese Character Name,English Character Name</em> - one per line</h4>
+      <%= f.text_area :character_csv, size: '10x10' %>
+    </div>
+    <div class="span6">
+      <h2>Series</h2>
+      <h4>In format <em>Japanese Series Name,English Series Name</em> - one per line</h4>
+      <%= f.text_area :series_csv, size: '10x10' %>
     </div>
   </div>
 
