--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -2,7 +2,7 @@
   <h1>Utilities</h1>
 </div>
 
-<%= form_for :info, remote: true do |f| -%>
+<%= form_for :info, remote: true, html: {class: 'form-horizontal'} do |f| -%>
   <div class="row-fluid">
     <div class="span6">
       <h2>Characters</h2>
@@ -16,24 +16,24 @@
     </div>
   </div>
 
-  <div class="row-fluid">
-    <div class="span12">
-      <h2>Text to transform</h2>
-      <div class="well">
-        <h4>
-          <%= f.radio_button :transform, :name_list, checked: true %>
-          Convert list of <em>&lt;&lt;Japanese Name @ Japanese Series&gt;&gt;</em>
-        </h4>
-        <%= f.text_area :name_csv, size: '10x10' %>
-      </div>
-      <div class="well">
-        <h4>
-          <%= f.radio_button :transform, :result_list %>
-          Convert list of results with Japanese Names and Series
-        </h4>
-        <%= f.text_area :result_csv, size: '10x10' %>
-      </div>
-    </div>
+  <h2>Text to transform</h2>
+  <div class="well">
+    <h4>
+      <%= f.radio_button :transform, :name_list, checked: true %>
+      <%= f.label :transform_name_list do %>
+        Convert list of <em>&lt;&lt;Japanese Name @ Japanese Series&gt;&gt;</em>
+      <% end %>
+    </h4>
+    <%= f.text_area :name_csv, size: '10x10' %>
+  </div>
+  <div class="well">
+    <h4>
+      <%= f.radio_button :transform, :result_list %>
+      <%= f.label :transform_result_list do %>
+        Convert list of results with Japanese Names and Series
+      <% end %>
+    </h4>
+    <%= f.text_area :result_csv, size: '10x10' %>
   </div>
 
   <div class="form-actions">
@@ -43,19 +43,11 @@
 
 <div id="flash-alert" class="alert alert-error" style="display: none;"></div>
 
-<div class="row-fluid">
-  <div class="span12">
-    <div class="page-header">
-      <h1 id="results-title"></h1>
-    </div>
-  </div>
+<div class="page-header">
+  <h1 id="results-title"></h1>
 </div>
 
-<div class="row-fluid">
-  <div class="span12">
-    <div id="results"></div>
-  </div>
-</div>
+<div id="results"></div>
 
 <br />
 <br />
