--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -2,17 +2,17 @@
   <h1>Utilities</h1>
 </div>
 
-<%= form_for :info, remote: true, html: {class: 'form-horizontal'} do |f| -%>
+<%= form_for :info, html: {class: 'form-horizontal'} do |f| -%>
   <div class="row-fluid">
     <div class="span6">
       <h2>Characters</h2>
       <h4>In format <em>Japanese Character Name,English Character Name</em> - one per line</h4>
-      <%= f.text_area :character_csv, size: '10x10' %>
+      <%= f.file_field :character_csv %>
     </div>
     <div class="span6">
       <h2>Series</h2>
       <h4>In format <em>Japanese Series Name,English Series Name</em> - one per line</h4>
-      <%= f.text_area :series_csv, size: '10x10' %>
+      <%= f.file_field :series_csv %>
     </div>
   </div>
 
@@ -21,33 +21,22 @@
     <h4>
       <%= f.radio_button :transform, :name_list, checked: true %>
       <%= f.label :transform_name_list do %>
-        Convert list of <em>&lt;&lt;Japanese Name @ Japanese Series&gt;&gt;</em>
+        Convert list of names in format <em>&lt;&lt;JP Name＠JP Series&gt;&gt;</em> - one per line
       <% end %>
     </h4>
-    <%= f.text_area :name_csv, size: '10x10' %>
+    <%= f.file_field :name_csv %>
   </div>
   <div class="well">
     <h4>
       <%= f.radio_button :transform, :result_list %>
       <%= f.label :transform_result_list do %>
-        Convert list of results with Japanese Names and Series
+        Convert list of results in format <em>1位　427票　JP Name＠JP Series</em> - one per line
       <% end %>
     </h4>
-    <%= f.text_area :result_csv, size: '10x10' %>
+    <%= f.file_field :result_csv %>
   </div>
 
   <div class="form-actions">
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
   </div>
 <% end -%>
-
-<div id="flash-alert" class="alert alert-error" style="display: none;"></div>
-
-<div class="page-header">
-  <h1 id="results-title"></h1>
-</div>
-
-<div id="results"></div>
-
-<br />
-<br />
