--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row-fluid" xmlns="http://www.w3.org/1999/html">
+<div class="row-fluid">
   <% if @character.avatar? %>
     <div class="span2" style="text-align: center;">
       <%= image_tag @character.avatar_url, size: '100x100' %>
@@ -8,18 +8,26 @@
     <div class="span12">
   <% end %>
       <h1><%= @character.full_name %></h1>
-      <h3>Series: <em><%= link_to @character.main_series.name, series_path(@character.main_series) %></em></h3>
+      <h3><em><%= link_to @character.main_series.name, series_path(@character.main_series) %></em></h3>
       <%= format_other_series_list @character %>
     </div>
 </div>
 
-<div class="page-header">
-  <h2>Statistics</h2>
+<p></p>
+
+<div class="row-fluid">
+  <div class="span12">
+    <%= format_voice_actor_list @character %>
+  </div>
 </div>
 
-<p>
-  Stuff
-</p>
+<!--<div class="page-header">-->
+  <!--<h2>Statistics</h2>-->
+<!--</div>-->
+
+<!--<p>-->
+  <!--Stuff-->
+<!--</p>-->
 
 <div class="page-header">
   <h2>Tournament History</h2>
@@ -27,19 +35,15 @@
 
 <dl class="dl-horizontal">
   <% @character.tournament_history.each do |t, th| %>
-    <p>
-      <dt>
-        <h3><%= t.year %></h3>
-      </dt>
-      <dd>
-        <%= format_tournament_buttons t, th %>
-      </dd>
-    </p>
+    <dt>
+      <h3><%= t.year %></h3>
+    </dt>
+    <dd>
+      <%= format_character_tournament_buttons t, th %>
+    </dd>
   <% end %>
 </dl>
 
-
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              characters_path, :class => 'btn'  %>
+  <%= link_to 'Character index', characters_path, class: 'btn' %>
 </div>
