--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -1,27 +1,66 @@
-<%- model_class = @series.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
+<div class="row-fluid">
+  <div class="span12">
+    <h1><%= @series.name %></h1>
+  </div>
+</div>
 
-<p>
-  <strong><%= model_class.human_attribute_name(:name) %>:</strong><br>
-  <%= @series.name %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:color_code) %>:</strong><br>
-  <%= @series.color_code %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:slug) %>:</strong><br>
-  <%= @series.slug %>
-</p>
+<div class="page-header">
+  <h2>Characters</h2>
+</div>
+
+<% unless @major_chars.empty? %>
+  <div class="well">
+    <div class="row-fluid">
+      <% @major_chars.each do |char_arr| %>
+        <div class="span3">
+          <% char_arr.each do |character| %>
+            <div class="thumbnail character_entry">
+              <%= link_to image_tag(character.avatar_url(:thumb), size: '40x40'), character_path(character) %>
+              <%= link_to(character.full_name, character_path(character)) %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
+<% unless @cameo_chars.empty? %>
+  <div class="page-header">
+    <h4>Characters in a cameo role</h4>
+  </div>
+
+  <div class="well">
+    <div class="row-fluid">
+      <% @cameo_chars.each do |char_arr| %>
+        <div class="span3">
+          <% char_arr.each do |character| %>
+            <div class="thumbnail character_entry">
+              <%= link_to image_tag(character.avatar_url(:thumb), size: '40x40'), character_path(character) %>
+              <%= link_to(character.full_name, character_path(character)) %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
+<div class="page-header">
+  <h2>Tournament History</h2>
+</div>
+
+<dl class="dl-horizontal">
+  <% @series.tournament_history.each do |t, th| %>
+    <dt>
+      <h3><%= t.year %></h3>
+    </dt>
+    <dd>
+      <%= format_history_tournament_buttons t, th %>
+    </dd>
+  <% end %>
+</dl>
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              series_path, :class => 'btn'  %>
-  <%#%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_series_path(@series), :class => 'btn' %>
-  <%#%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              series_path(@series),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+  <%= link_to 'Series index', series_index_path, class: 'btn' %>
 </div>
