--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -1,27 +1,43 @@
-<%- model_class = @voice_actor.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
+<div class="row-fluid">
+  <div class="span12">
+    <h1><%= @voice_actor.full_name %></h1>
+  </div>
+</div>
 
-<p>
-  <strong><%= model_class.human_attribute_name(:first_name) %>:</strong><br>
-  <%= @voice_actor.first_name %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:last_name) %>:</strong><br>
-  <%= @voice_actor.last_name %>
-</p>
-<p>
-  <strong><%= model_class.human_attribute_name(:slug) %>:</strong><br>
-  <%= @voice_actor.slug %>
-</p>
+<div class="page-header">
+  <h2>Characters</h2>
+</div>
+
+<div class="well">
+  <div class="row-fluid">
+    <% @chars.each do |char_arr| %>
+      <div class="span3">
+        <% char_arr.each do |character| %>
+          <div class="thumbnail character_entry">
+            <%= link_to image_tag(character.avatar_url(:thumb), size: '40x40'), character_path(character) %>
+            <%= link_to(character.full_name, character_path(character)) %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+<div class="page-header">
+  <h2>Tournament History</h2>
+</div>
+
+<dl class="dl-horizontal">
+  <% @voice_actor.tournament_history.each do |t, th| %>
+    <dt>
+      <h3><%= t.year %></h3>
+    </dt>
+    <dd>
+      <%= format_history_tournament_buttons t, th %>
+    </dd>
+  <% end %>
+</dl>
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              voice_actors_path, :class => 'btn'  %>
-  <%#%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_voice_actor_path(@voice_actor), :class => 'btn' %>
-  <%#%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              voice_actor_path(@voice_actor),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+  <%= link_to 'Voice actor index', voice_actors_path, class: :btn  %>
 </div>
