--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require bootstrap_and_overrides
+ *= require admin/admin
+ *= require character_entry
  *= require jquery.ui.autocomplete
- *= require_tree .
 */
