--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -14,10 +14,7 @@
       <% @major_chars.each do |char_arr| %>
         <div class="span3">
           <% char_arr.each do |character| %>
-            <div class="thumbnail character_entry">
-              <%= link_to image_tag(character.avatar_url(:thumb), size: '40x40'), character_path(character) %>
-              <%= link_to(character.full_name, character_path(character)) %>
-            </div>
+            <%= character_entry character, false, true %>
           <% end %>
         </div>
       <% end %>
@@ -35,10 +32,7 @@
       <% @cameo_chars.each do |char_arr| %>
         <div class="span3">
           <% char_arr.each do |character| %>
-            <div class="thumbnail character_entry">
-              <%= link_to image_tag(character.avatar_url(:thumb), size: '40x40'), character_path(character) %>
-              <%= link_to(character.full_name, character_path(character)) %>
-            </div>
+              <%= character_entry character %>
           <% end %>
         </div>
       <% end %>
