--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -13,10 +13,7 @@
     <% @chars.each do |char_arr| %>
       <div class="span3">
         <% char_arr.each do |character| %>
-          <div class="thumbnail character_entry">
-            <%= link_to image_tag(character.avatar_url(:thumb), size: '40x40'), character_path(character) %>
-            <%= link_to(character.full_name, character_path(character)) %>
-          </div>
+          <%= character_entry character %>
         <% end %>
       </div>
     <% end %>
