--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -21,7 +21,7 @@
     <h4>
       <%= f.radio_button :transform, :name_list, checked: true %>
       <%= f.label :transform_name_list do %>
-        Convert list of names in format <em>&lt;&lt;JP Name＠JP Series&gt;&gt;</em> - one per line
+        Convert list of names in format <em>一次予選XX組 JP Name＠JP Series</em> - one per line
       <% end %>
     </h4>
     <%= f.file_field :name_csv %>
