--- a/app/assets/stylesheets/character_entry.css.less
+++ b/app/assets/stylesheets/character_entry.css.less
@@ -1,5 +1,17 @@
+@import "twitter/bootstrap/variables";
+@import "twitter/bootstrap/mixins";
+
 .character_entry {
-    padding: 2px;
+    padding: 3px;
+    height: 40px;
+
+    &.fixed_width {
+        width: 230px;
+        &.no_avatar {
+            width: 190px;
+        }
+    }
+
     div {
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -7,11 +19,12 @@
     }
     .character_image {
         float: left;
-        margin-right: 0.4em;
+        margin-right: 5px;
     }
     .character_name, .series_name {
+        text-align: left;
         position: relative;
-        height: 1.2em;
+        height: 15px;
     }
     .character_name {
         top: 0.5em;
@@ -20,13 +33,43 @@
         top: 0.7em;
         font-size: smaller;
     }
+    .character_votes {
+        float: right;
+        margin-left: 1px;
+        width: 40px;
+        height: 38px;
+        line-height: 38px;
+        border: 1px solid #ddd;
+        .border-radius(3px);
+        .box-shadow(0 1px 1px rgba(0,0,0,.075));
+
+        p {
+            position: relative;
+            text-align: center;
+        }
+
+        &.winner {
+            p {
+                font-weight: bold;
+            }
+        }
+        &.loser {
+            background-color: #d3d3d3;
+        }
+    }
     &.right {
         .character_image {
             float: right;
-            margin-left: 0.4em;
+            margin-left: 5px;
+            margin-right: 0;
         }
         .character_name, .series_name {
             text-align: right;
+        }
+        .character_votes {
+            float: left;
+            margin-left: 0;
+            margin-right: 5px;
         }
     }
     &.hide_series {
@@ -37,7 +80,26 @@
             display: none;
         }
     }
-    .cb {
-        clear: both;
+    &.light_text {
+        p, div, em {
+            color: #FFFFFF;
+        }
+        a, a:link {
+            color: #FFFFFF;
+        }
+        a:hover {
+            color: darken(#FFFFFF, 15%);
+        }
+    }
+    &.dark_text {
+        p, div, em {
+            color: #000000;
+        }
+        a, a:link {
+            color: #000000;
+        }
+        a:hover {
+            color: lighten(#000000, 15%);
+        }
     }
 }
