--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Saimoe</a>
+          <a class="brand" href="#"><%= image_tag 'saimoe-logo.png' %></a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
+              <li class="dropdown">
+                <%= link_to('#', class: 'dropdown-toggle', data: {toggle: 'dropdown'}) do %>
+                    Tournaments <b class="caret"></b>
+                <% end %>
+                <ul class="dropdown-menu">
+                  <% Tournament.ordered.reverse_order.each do |t| %>
+                      <%= link_to t.year, short_tournament_path(t.year) %>
+                  <% end %>
+                </ul>
+              </li>
               <li><%= link_to 'Characters', characters_path %></li>
               <li><%= link_to 'Series', series_index_path %></li>
               <li><%= link_to 'Voice Actors', voice_actors_path %></li>
