--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -48,3 +48,12 @@
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
   </div>
 <% end -%>
+
+<div class="page-header">
+  <h2>Clear cache</h2>
+</div>
+
+<div class="well">
+  <p>Clicking here will force a reload of the information on the tournament screens.</p>
+  <p><%= link_to "Clear the cache", admin_clear_cache_path, class: 'btn btn-warning' %></p>
+</div>
