--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -39,3 +39,10 @@ a.anchor, a:hover.anchor {
 div.cb {
     clear: both;
 }
+
+.navbar .nav > li.top-subtitle {
+    font-weight: bold;
+    a {
+        color: #FFFFFF;
+    }
+}
