--- a/app/views/shared/_table_match.html.erb
+++ b/app/views/shared/_table_match.html.erb
@@ -1,4 +1,4 @@
-<% raise 'locals not defined' unless defined?(stage_matches) && defined?(group) && defined?(hierarchy) && defined?(columns) %>
+<% raise 'locals not defined' unless defined?(stage_matches) && defined?(group) && defined?(columns) %>
 <% right = defined?(right_align) && right_align %>
 
 <div class="tournament_group<%= ' right' if right %>" style="min-width: <%= 240 + columns*86 %>px;">
@@ -30,38 +30,17 @@
         <div class="matches_container<%= ' right' if right %>">
           <% matches.each do |match| %>
               <% match.match_entries.ordered_by_position.each do |me| %>
-                  <% vote_height = table_votes_height(me, hierarchy) %>
-                  <div class="match_votes<%= match.finished? ? (me.winner? ? ' winner' : ' loser') : ''%>"
-                       style="height: <%= vote_height %>; line-height: <%= vote_height %>;
-                         <%= " background-color: ##{me.series.color_code};" if me.winner? && me.series.color_code %>">
-                    <p>
-                      <%= me.number_of_votes %>
-                    </p>
-                  </div>
+                  <%= match_entry_votes_box match, me %>
                   <div class="cb"></div>
               <% end %>
           <% end %>
         </div>
         <div class="matches_container<%= ' right' if right %>">
           <% matches.each do |match| %>
-              <% date_height = table_date_height(match, hierarchy) %>
-              <div class="match_votes"
-                   style="height: <%= date_height %>; line-height: <%= date_height %>;
-                     <%= " background-color: ##{match.winning_match_entries.first.series.color_code};" if match.finished? && !match.draw? && match.winning_match_entries.first.series.color_code %>">
-                <p>
-                  <%= match.date.to_s(:month_day) %>
-                </p>
-              </div>
+              <%= match_date_box match %>
               <div class="cb"></div>
           <% end %>
         </div>
       </div>
   <% end %>
 </div>
-
-
-
-
-
-
-
