--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,3 +1,5 @@
+<% series = @character.main_series %>
+
 <div class="row-fluid">
   <% if @character.avatar? %>
     <div class="span2" style="text-align: center;">
@@ -15,7 +17,7 @@
     </div>
 </div>
 
-<!--<div class="page-header">-->
+<!--<div class="page-header"<%= " style=\"border-bottom: 1px solid ##{series.color_code}\"".html_safe if series.color_code %>>-->
   <!--<h2>Statistics</h2>-->
 <!--</div>-->
 
@@ -23,7 +25,7 @@
   <!--Stuff-->
 <!--</p>-->
 
-<div class="page-header">
+<div class="page-header"<%= " style=\"border-bottom: 1px solid ##{series.color_code}\"".html_safe if series.color_code %>>
   <h2>Tournament History</h2>
 </div>
 
