Fix date page for matches that haven't happened yet

--- a/app/views/date/show.html.erb
+++ b/app/views/date/show.html.erb
@@ -8,27 +8,46 @@
         <div class="span6">
           <table class="table table-condensed match_date">
             <caption>
-              <h3><%= pretty_match match %> <small>(<%= match.number_of_votes %> votes total)</small></h3>
+              <h3>
+                <%= pretty_match match %>
+                <% if match.is_finished? %>
+                    <small>
+                      (<%= match.number_of_votes %> votes total)
+                    </small>
+                <% end %>
+              </h3>
             </caption>
             <thead>
             <tr>
-              <th></th>
-              <th></th>
-              <th>votes</th>
-              <th>%&nbsp;share</th>
-              <th></th>
+              <% if match.is_finished? %>
+                  <th></th>
+                  <th></th>
+                  <th>votes</th>
+                  <th>%&nbsp;share</th>
+                  <th></th>
+              <% else %>
+                  <th></th>
+              <% end %>
             </tr>
             </thead>
             <tbody>
-            <% match.match_entries.with_rank.ordered_by_votes.collect {|r| [r[:rank].to_i, r]}.each do |rank, me| %>
-                <% first = (rank == 1) %>
-                <tr>
-                  <td><%= image_tag me.avatar.url(:thumb) %></td>
-                  <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= rank.ordinalize %></td>
-                  <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= me.number_of_votes.to_s %></td>
-                  <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= format_percent me.vote_share %></td>
-                  <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
-                </tr>
+            <% if match.is_finished? %>
+                <% match.match_entries.with_rank.ordered_by_votes.collect {|r| [r[:rank].to_i, r]}.each do |rank, me| %>
+                    <% first = (rank == 1) %>
+                    <tr>
+                      <td><%= image_tag me.avatar.url(:thumb) %></td>
+                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= rank.ordinalize %></td>
+                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= me.number_of_votes.to_s %></td>
+                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= format_percent me.vote_share %></td>
+                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
+                    </tr>
+                <% end %>
+            <% else %>
+                <% match.match_entries.ordered_by_position.each do |me| %>
+                    <tr>
+                      <td><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
+                    </tr>
+                <% end %>
             <% end %>
             </tbody>
           </table>
