--- a/app/views/date/show.html.erb
+++ b/app/views/date/show.html.erb
@@ -6,51 +6,17 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span6">
-          <table class="table table-condensed match_date">
-            <caption>
-              <h3>
-                <%= pretty_match match %>
-                <% if match.is_finished? %>
-                    <small>
-                      (<%= match.number_of_votes %> votes total)
-                    </small>
-                <% end %>
-              </h3>
-            </caption>
-            <thead>
-            <tr>
+          <% caption = content_tag(:h3) do %>
+              <%= pretty_match match %>
               <% if match.is_finished? %>
-                  <th></th>
-                  <th></th>
-                  <th>votes</th>
-                  <th>%&nbsp;share</th>
-                  <th></th>
-              <% else %>
-                  <th></th>
+                  <small>
+                    (<%= match.number_of_votes %> votes total)
+                  </small>
               <% end %>
-            </tr>
-            </thead>
-            <tbody>
-            <% if match.is_finished? %>
-                <% match.match_entries.with_rank.ordered_by_votes.collect {|r| [r[:rank].to_i, r]}.each do |rank, me| %>
-                    <% first = (rank == 1) %>
-                    <tr>
-                      <td><%= image_tag me.avatar.url(:thumb) %></td>
-                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= rank.ordinalize %></td>
-                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= me.number_of_votes.to_s %></td>
-                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= format_percent me.vote_share %></td>
-                      <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
-                    </tr>
-                <% end %>
-            <% else %>
-                <% match.match_entries.ordered_by_position.each do |me| %>
-                    <tr>
-                      <td><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
-                    </tr>
-                <% end %>
-            <% end %>
-            </tbody>
-          </table>
+          <% end %>
+          <%= render partial: 'shared/classified_match', locals: {match: match,
+                                                                  extra_table_classes: %w(match_date),
+                                                                  caption: caption} %>
         </div>
         <div class="span6">
           <%# Other stuff about the match here - like graphs %>
