--- a/app/views/shared/_classified_match.html.erb
+++ b/app/views/shared/_classified_match.html.erb
@@ -32,7 +32,7 @@
       <% match.match_entries.with_rank.ordered_by_votes.collect {|r| [r[:rank].to_i, r]}.each do |rank, me| %>
           <% first = (rank == 1) %>
           <tr>
-            <td style="width: 50px;"><%= image_tag me.avatar.url(:thumb), size: '40x40' %></td>
+            <td style="width: 50px;"><%= image_tag((me.avatar ? me.avatar.url(:thumb) : 'avatar-defaults/default-thumb.png'), size: '40x40') %></td>
             <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= rank.ordinalize %></td>
             <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= me.number_of_votes.to_s %></td>
             <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= format_percent me.vote_share %></td>
@@ -42,8 +42,12 @@
   <% else %>
       <% match.match_entries.ordered_by_position.each do |me| %>
           <tr>
-            <td style="width: 50px;"><%= image_tag me.avatar.url(:thumb), size: '40x40' %></td>
-            <td><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
+            <td style="width: 50px;"><%= image_tag((me.avatar ? me.avatar.url(:thumb) : 'avatar-defaults/default-thumb.png'), size: '40x40') %></td>
+            <% if me.character && me.series %>
+                <td><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
+            <% else %>
+                <td>Winner of <%= pretty_match me.previous_match %></td>
+            <% end %>
           </tr>
       <% end %>
   <% end %>
