Fade out losers, make statistics not have lots of zeroes. [ci skip]

--- a/app/assets/stylesheets/character_entry.css.less
+++ b/app/assets/stylesheets/character_entry.css.less
@@ -12,6 +12,11 @@
         }
     }
 
+    &.fade_out {
+        filter:Alpha(opacity=70);
+        opacity: 0.7;
+    }
+
     div {
         white-space: nowrap;
         text-overflow: ellipsis;
