--- a/app/assets/stylesheets/tournament_table.css.less
+++ b/app/assets/stylesheets/tournament_table.css.less
@@ -130,9 +130,14 @@
     float: left;
     margin: 30px 0;
 
-    &.right {
-        float: right;
+    @media (min-width: 768px) {
+
+        &.right {
+            float: right;
+        }
+
     }
+
 
     .match_votes {
         float: right;
