--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <![endif]-->
 
     <%= stylesheet_link_tag "application", media: "all" %>
+    <%= analytics_init if Rails.env.production? %>
 
     <%#<link href="images/favicon.ico" rel="shortcut icon">%>
     <%#<link href="images/apple-touch-icon.png" rel="apple-touch-icon">%>
