--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,11 @@
         <div class="span2"></div>
         <div class="span8">
           <div class="page-header">
-            <h3>Today's Matches</h3>
+            <% if Time.now.in_time_zone('Asia/Tokyo').to_date == (match_date = @todays_matches.first.try(:date)) %>
+                <h3>Today's Matches</h3>
+            <% else %>
+                <h3><%= match_date ? "Matches for #{match_date.to_s(:long)}" : "Next Matches" %></h3>
+            <% end %>
             <h5>See <%= link_to 'here', 'http://www.animesaimoe.org/votingformat.html' %> for full details</h5>
           </div>
           <div class="well">
