Added vote graphs, chamged classified match layout slightly [ci skip]

--- a/app/assets/stylesheets/date.css.less
+++ b/app/assets/stylesheets/date.css.less
@@ -11,5 +11,10 @@ table.match_date {
 
     td {
         vertical-align: middle;
+
+        span.table-series {
+            font-size: smaller;
+            font-style: italic;
+        }
     }
 }
