--- a/app/views/date/show.html.erb
+++ b/app/views/date/show.html.erb
@@ -5,7 +5,7 @@
 <% @matches.each do |match| %>
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span6">
+        <div class="span5">
           <% caption = content_tag(:h3) do %>
               <%= pretty_match match %>
               <% if match.is_finished? %>
@@ -18,8 +18,8 @@
                                                                   extra_table_classes: %w(match_date),
                                                                   caption: caption} %>
         </div>
-        <div class="span6">
-          <%# Other stuff about the match here - like graphs %>
+        <div class="span7">
+          <%= image_tag match.vote_graph_url if match.vote_graph? %>
         </div>
       </div>
     </div>
