--- a/app/views/shared/_classified_match.html.erb
+++ b/app/views/shared/_classified_match.html.erb
@@ -3,14 +3,6 @@
   <% if defined?(caption) %>
       <caption>
         <%= caption %>
-        <!--<h3>-->
-          <!--<%= pretty_match match %>-->
-          <!--<% if match.is_finished? %>-->
-              <!--<small>-->
-                <!--(<%= match.number_of_votes %> votes total)-->
-              <!--</small>-->
-          <!--<% end %>-->
-        <!--</h3>-->
       </caption>
   <% end %>
   <thead>
@@ -36,7 +28,10 @@
             <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= rank.ordinalize %></td>
             <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= me.number_of_votes.to_s %></td>
             <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= format_percent me.vote_share %></td>
-            <td<%= " style=\"font-weight: bold;\"".html_safe if first %>><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
+            <td<%= " style=\"font-weight: bold;\"".html_safe if first %>>
+              <%= link_to me.character_name, character_path(me.character) %><br />
+              <span class="table-series"><%= link_to me.series.name, series_path(me.series) %></span>
+            </td>
           </tr>
       <% end %>
   <% else %>
@@ -44,7 +39,10 @@
           <tr>
             <td style="width: 50px;"><%= image_tag((me.avatar ? me.avatar.url(:thumb) : 'avatar-defaults/default-thumb.png'), size: '40x40') %></td>
             <% if me.character && me.series %>
-                <td><%= "#{link_to me.character_name, character_path(me.character)} @ #{link_to me.series.name, series_path(me.series)}".html_safe %></td>
+                <td>
+                  <%= link_to me.character_name, character_path(me.character) %><br />
+                  <span class="table-series"><%= link_to me.series.name, series_path(me.series) %></span>
+                </td>
             <% else %>
                 <td>Winner of <%= pretty_match me.previous_match %></td>
             <% end %>
