Make final stages work when not all of them are decided

--- a/app/assets/stylesheets/character_entry.css.less
+++ b/app/assets/stylesheets/character_entry.css.less
@@ -17,6 +17,10 @@
         opacity: 0.7;
     }
 
+    &.fill_background {
+        background-color: #D3D3D3;
+    }
+
     div {
         white-space: nowrap;
         text-overflow: ellipsis;
