Upgraded to an actually safe version of Rails.

--- a/app/views/layouts/tournaments.html.erb
+++ b/app/views/layouts/tournaments.html.erb
@@ -3,7 +3,7 @@
         Saimoe <%= @tournament.year %>
     <% end %>
     <% content_for :tournament_nav do %>
-        <div class="navbar" style="margin-bottom: 0;">
+        <div class="navbar navbar-inverse" style="margin-bottom: 0;">
           <div class="navbar-inner">
             <div class="container-fluid">
               <div class="container-fluid nav-collapse">
