--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,18 +2,23 @@
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings');
+@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white');
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
+// Note: If you use asset_path() here, your compiled bootstrap_and_overrides.css will not
+//       have the proper paths. So for now we use the absolute path.
 @fontAwesomeEotPath: asset-path('fontawesome-webfont.eot');
+@fontAwesomeEotPath_iefix: asset-path('fontawesome-webfont.eot#iefix');
 @fontAwesomeWoffPath: asset-path('fontawesome-webfont.woff');
 @fontAwesomeTtfPath: asset-path('fontawesome-webfont.ttf');
-@fontAwesomeSvgzPath: asset-path('fontawesome-webfont.svgz');
 @fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');
 
 // Font Awesome
 @import "fontawesome";
+
+// Glyphicons
+//@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
 //
@@ -21,10 +26,12 @@
 // you may use and inherit here
 //
 // If you'd like to override bootstrap's own variables, you can do so here as well
-// See http://twitter.github.com/bootstrap/less.html for their names and documentation
+// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
 // @linkColor: #ff0000;
+
+@baseFontSize: 13px;
 
 // Make anchor links look like ordinary text.
 a.anchor, a:hover.anchor {
