Update gems and update code to utilise some new gems

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -50,6 +50,6 @@ div.cb {
 .navbar .nav > li.top-subtitle {
     font-weight: bold;
     a {
-        color: #FFFFFF;
+        color: #000000;
     }
 }
